# chatbgp

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/data/: help-content.json  learn-content.json  universal-mode.json
scripts/: build_deploy.sh  chatbgp.jl  setup.sh
wasm/: Cargo.toml
wasm/pkg/: chatbgp.js  chatbgp_bg.wasm
wasm/src/: lib.rs
