[package]
name = "chatbgp"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde = { version = "1.0", features = ["derive"] }

[package.metadata.wasm-pack.profile.release]
wee-alloc = false
wasm-opt = false

[package.metadata.wasm-pack]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
